# usbpd

./: Cargo.toml  LICENSE  README.md  justfile  rust-toolchain.toml
.github/ci/: build.sh  test.sh
.github/workflows/: ci.yml
examples/embassy/: Cargo.toml
examples/embassy-nucleo-h563zi/: Cargo.toml  README.md
examples/embassy-nucleo-h563zi/.cargo/: config.toml
examples/embassy-nucleo-h563zi/src/: lib.rs  main.rs  power.rs
examples/embassy-stm32-g431cb/: Cargo.toml  README.md
examples/embassy-stm32-g431cb-epr/: Cargo.toml  README.md
examples/embassy-stm32-g431cb-epr/.cargo/: config.toml
examples/embassy-stm32-g431cb-epr/src/: main.rs  power.rs
examples/embassy-stm32-g431cb-pps/: Cargo.toml
examples/embassy-stm32-g431cb-pps/src/: power.rs
examples/embassy-stm32-g431cb/src/: main.rs  power.rs
examples/embassy/.cargo/: config.toml
examples/embassy_h5/: Cargo.toml
examples/embassy_h5/.cargo/: config.toml
examples/embassy_h5/src/: main.rs  power.rs
src/: counters.rs  dummy.rs  lib.rs  timers.rs
src/protocol_layer/: counters.rs  mod.rs
src/protocol_layer/message/: header.rs  mod.rs  pdo.rs  request.rs  vdo.rs
src/sink/: device_policy_manager.rs  mod.rs  policy_engine.rs
usb-pd/: Cargo.toml
usb-pd/src/: counter.rs  header.rs  lib.rs
usb-pd/src/messages/: mod.rs  pdo.rs
usb-pd/src/sink/: mod.rs  policy.rs
usbpd/: Cargo.toml  README.md
usbpd-testing/: Cargo.toml
usbpd-testing/.cargo/: config.toml
usbpd-testing/src/: main.rs  power.rs
usbpd-traits/: Cargo.toml  README.md
usbpd-traits/src/: lib.rs
usbpd/src/: counters.rs  dummy.rs  lib.rs  timers.rs
usbpd/src/protocol_layer/: mod.rs
usbpd/src/protocol_layer/message/: epr_messages_test.rs  header.rs  mod.rs  pdo.rs  request.rs  vdo.rs
usbpd/src/protocol_layer/message/data/: epr_mode.rs  mod.rs  request.rs  sink_capabilities.rs  source_capabilities.rs  vendor_defined.rs
usbpd/src/protocol_layer/message/extended/: chunked.rs  extended_control.rs  mod.rs
usbpd/src/sink/: device_policy_manager.rs  mod.rs  policy_engine.rs  request.rs
usbpd/src/sink/policy_engine/: mod.rs  tests.rs
