[package]
name = "usbpd"
version = "0.0.5"
authors = ["Adrian Figueroa <elagil@takanome.de>"]
edition = "2021"
description = "USB-PD library for `[no_std]`."
documentation = "https://docs.rs/usbpd"
repository = "https://github.com/elagil/usbpd"
homepage = "https://github.com/elagil/usbpd"
readme = "README.md"
license = "MIT"
keywords = ["no_std", "usb-pd", "embedded"]
exclude = [".github", "*.pdf"]

[dependencies]
proc-bitfield = "0.5.2"
byteorder = { version = "1.5.0", default-features = false }
heapless = "0.8.0"
uom = { version = "0.36.0", default-features = false, features = [
    "si",
    "u8",
    "u16",
    "u32",
] }
futures = { version = "0.3.31", default-features = false }

defmt = { version = "0.3.6", optional = true }
log = { version = "0.4.25", optional = true }

[dev-dependencies]
tokio = { version = "1.43.0", features = ["rt", "macros"] }

[features]
default = []

log = ["dep:log"]
defmt = ["dep:defmt", "heapless/defmt-03"]
