[package]
edition = "2021"
name = "usbpd-testing"
version = "0.1.0"
license = "GPL-3.0"

[dependencies]
embassy-stm32 = { path = "../../embassy/embassy-stm32", features = [
    "defmt",
    "time-driver-any",
    "stm32g431cb",
    "memory-x",
    "unstable-pac",
    "exti",
] }
embassy-sync = { path = "../../embassy/embassy-sync", features = ["defmt"] }
embassy-executor = { path = "../../embassy/embassy-executor", features = [
    "arch-cortex-m",
    "executor-thread",
    "defmt",
    "task-arena-size-8192",
] }
embassy-time = { path = "../../embassy/embassy-time", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-100_000",
] }
embassy-futures = { path = "../../embassy/embassy-futures" }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
embedded-hal = "1"
panic-probe = { version = "0.3", features = ["print-defmt"] }
heapless = { version = "0.8", default-features = false }
static_cell = "2"
micromath = "2.1.0"

uom = { version = "0.36.0", default-features = false, features = ["si", "f32"] }
usbpd = { path = "../usbpd" }

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
lto = true
opt-level = 'z'         # <-
overflow-checks = true  # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = true
opt-level = 'z'          # <-
overflow-checks = false  # <-
