[package]
name = "usbpd-traits"
version = "1.0.1"
authors = ["Adrian Figueroa <elagil@takanome.de>"]
edition = "2024"
description = "USB-PD library traits."
documentation = "https://docs.rs/usbpd-traits"
repository = "https://github.com/elagil/usbpd"
homepage = "https://github.com/elagil/usbpd"
readme = "README.md"
license = "MIT"
keywords = ["no_std", "usb-pd", "embedded", "traits"]

[dependencies]
defmt = { version = "1.0.1", optional = true }

[features]
default = []
defmt = ["dep:defmt"]
