[package]
name = "usbpd"
version = "0.1.0"
edition = "2021"
description = "USB-PD library for `[no_std]`."
documentation = "https://docs.rs/usbpd"
repository = "https://github.com/elagil/usbpd"
homepage = "https://github.com/elagil/usbpd"
readme = "README.md"
license = "MIT"
keywords = ["no_std", "usb-pd", "embedded"]

[lib]
harness = false # do not use the built-in cargo test harness -> resolve rust-analyzer errors
test = false

[dependencies]
proc-bitfield = "0.5.2"
byteorder = { version = "1.5.0", default-features = false }
defmt = {version="0.3.6",optional = true}
heapless = "0.8.0"
uom = { version = "0.36.0", default-features = false, features = [
    "autoconvert",
    "si",
    "u8",
    "u16",
    "u32",
] }
futures = {version ="0.3.31", default-features = false}

[features]
default = ["defmt"]
defmt = ["dep:defmt", "heapless/defmt-03"]
