[package]
name = "usbpd"
version = "1.0.2"
authors = ["Adrian Figueroa <elagil@takanome.de>"]
edition = "2024"
description = "USB-PD library for `[no_std]`."
documentation = "https://docs.rs/usbpd"
repository = "https://github.com/elagil/usbpd"
homepage = "https://github.com/elagil/usbpd"
readme = "README.md"
license = "MIT"
keywords = ["no_std", "usb-pd", "embedded"]

[dependencies]
usbpd-traits = { version = "1.0.0", path = "../usbpd-traits" }
proc-bitfield = "0.5.2"
byteorder = { version = "1.5.0", default-features = false }
heapless = "0.8.0"
uom = { version = "0.37.0", default-features = false, features = ["si", "u32"] }
futures = { version = "0.3.31", default-features = false }

defmt = { version = "1.0.1", optional = true }
log = { version = "0.4.27", optional = true }

[dev-dependencies]
tokio = { version = "1.45.1", features = ["rt", "macros"] }

[features]
default = []

log = ["dep:log"]
defmt = ["dep:defmt", "heapless/defmt-03"]
