[package]
name = "usbpd"
version = "2.0.0"
authors = ["Adrian Figueroa <elagil@takanome.de>"]
edition = "2024"
description = "USB-PD library for `[no_std]`."
documentation = "https://docs.rs/usbpd"
repository = "https://github.com/elagil/usbpd"
homepage = "https://github.com/elagil/usbpd"
readme = "README.md"
license = "MIT"
keywords = ["no_std", "usb-pd", "embedded"]

[dependencies]
usbpd-traits = { version = "1.1.0", path = "../usbpd-traits" }
proc-bitfield = "0.5.2"
byteorder = { version = "1.5.0", default-features = false }
heapless = "0.9.1"
uom = { version = "0.36.0", default-features = false, features = ["si", "u32"] }
embassy-futures = "0.1.1"

thiserror = { version = "2.0.12", default-features = false }
defmt = { version = "1.0.1", optional = true }
log = { version = "0.4.28", optional = true }
serde = { version = "1.0.225", default-features = false, features = [
    "derive",
], optional = true }

[dev-dependencies]
tokio = { version = "1.47.1", features = ["rt", "macros"] }

[features]
default = []

log = ["dep:log"]
defmt = ["dep:defmt", "heapless/defmt-03"]
serde = ["dep:serde", "heapless/serde"]
