[package]
edition = "2021"
name = "usbpd-testing"
version = "0.1.0"
license = "MIT"

[dependencies]
# Change stm32h563zi to your chip name, if necessary.
# FIXME: Use released versions, when embassy-stm32 contains required fix for STM32H5 UCPD
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "306431822043c3c111e7970e0471c7d5c15e708f", features = [
    "defmt",
    "stm32h563zi",
    "memory-x",
    "time-driver-any",
    "exti",
    "unstable-pac",
    "low-power",
] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "306431822043c3c111e7970e0471c7d5c15e708f", features = [
    "defmt",
] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "306431822043c3c111e7970e0471c7d5c15e708f", features = [
    "task-arena-size-32768",
    "arch-cortex-m",
    "executor-thread",
    "defmt",
] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "306431822043c3c111e7970e0471c7d5c15e708f", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-32_768",
] }

embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "306431822043c3c111e7970e0471c7d5c15e708f" }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.0"
embedded-hal = "1.0.0"
embedded-hal-async = { version = "1.0" }
embedded-io-async = { version = "0.6.1" }
embedded-nal-async = "0.8.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
heapless = { version = "0.8", default-features = false }
rand_core = "0.6.3"
critical-section = "1.1"
embedded-storage = "0.3.1"
static_cell = "2"

uom = { version = "0.36.0", default-features = false, features = [
    "si",
    "u8",
    "u16",
    "u32",
] }
usbpd = { path = "../.." }

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3           # <-
overflow-checks = true  # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3           # <-
overflow-checks = true  # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-
