[package]
edition = "2021"
name = "usbpd-testing"
version = "0.1.0"
license = "MIT"

[dependencies]
# Change stm32h563zi to your chip name, if necessary.
# FIXME: Use released versions, when embassy-stm32 contains required fix for STM32H5 UCPD
embassy-stm32 = { path = "../../embassy/embassy-stm32", features = [
    "defmt",
    "stm32h563zi",
    "memory-x",
    "time-driver-any",
    "exti",
    "unstable-pac",
    "low-power",
] }
embassy-sync = { path = "../../embassy/embassy-sync", features = ["defmt"] }
embassy-executor = { path = "../../embassy/embassy-executor", features = [
    "task-arena-size-32768",
    "arch-cortex-m",
    "executor-thread",
    "defmt",
] }
embassy-time = { path = "../../embassy/embassy-time", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-32_768",
] }

embassy-futures = { path = "../../embassy/embassy-futures" }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.0"
embedded-hal = "1.0.0"
embedded-hal-async = { version = "1.0" }
embedded-io-async = { version = "0.6.1" }
embedded-nal-async = "0.8.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
heapless = { version = "0.8", default-features = false }
rand_core = "0.6.3"
critical-section = "1.1"
embedded-storage = "0.3.1"
static_cell = "2"

uom = { version = "0.36.0", default-features = false, features = [
    "si",
    "u8",
    "u16",
    "u32",
] }
usbpd = { path = "../../usbpd", features = ["defmt"] }

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3           # <-
overflow-checks = true  # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3           # <-
overflow-checks = true  # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-
