[package]
edition = "2024"
name = "usbpd-testing"
version = "0.1.0"
license = "MIT"

[dependencies]
embassy-stm32 = { path = "../../embassy/embassy-stm32", features = [
    "defmt",
    "time-driver-any",
    "memory-x",
    "unstable-pac",
    "exti",
] }
embassy-sync = { path = "../../embassy/embassy-sync", features = ["defmt"] }
embassy-executor = { path = "../../embassy/embassy-executor", features = [
    "arch-cortex-m",
    "executor-thread",
    "defmt",
] }
embassy-time = { path = "../../embassy/embassy-time", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-100_000",
] }
embassy-futures = { path = "../../embassy/embassy-futures" }

defmt = "1.0.1"
defmt-rtt = "1.0.0"

cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
embedded-hal = "1"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
heapless = { version = "0.9.1", default-features = false }
static_cell = "2.1.1"
micromath = "2.1.0"

uom = { version = "0.36.0", default-features = false, features = ["si"] }
usbpd = { path = "../../usbpd", features = ["defmt"] }
usbpd-traits = { path = "../../usbpd-traits", features = ["defmt"] }

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3           # <-
overflow-checks = true  # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-

[features]
default = ["stm32g431cb"]

stm32g431cb = ["embassy-stm32/stm32g431cb"]
